# electricity

./: pyproject.toml  requirements.txt
data_collector/: __init__.py  bq_manager.py  main.py  omie.py  parameters.py  queries.py
external_drift/: __init__.py  processing.py  training.py  utils.py
ml/: __init__.py  aux.py  kenel_density.py  kramers_moyal_coefficients.py
ml/neural_network/: __init__.py  utils.py
neural_ode/: __init__.py  components.py  utils.py
notebooks/: AgentCurves.ipynb  EMD.ipynb  Potenciala.ipynb  agent_curves.ipynb  auxiliary_graphs.ipynb  d2_coefficients_batch_1.pkl  d2_coefficients_batch_2.pkl  d2_coefficients_batch_3.pkl  d2_coefficients_batch_4.pkl  external_drift.ipynb  marginalpdbc_2002_2015.csv  neuralODE.ipynb  neural_ode.ipynb  potential_comparison.ipynb
offer_curves/: offer_curves.py
plot/: __init__.py  external_drift.py  kernel.py  simulations.py
potenciala/: __init__.py  metric.py  potenciala.py  transformers.py
scripts/neurips/: train_neural_ode_emd.py
scripts/neurips/data/: electricity_time_series.csv
src/electricity/: __init__.py
src/electricity/data_collector/: __init__.py  bq_manager.py  omie.py
src/electricity/external_drift/: __init__.py  processing.py  training.py  utils.py
src/electricity/ml/: __init__.py  aux.py  kenel_density.py  kramers_moyal_coefficients.py
src/electricity/offer_curves/: __init__.py  offer_curves.py
src/electricity/plot/: __init__.py  colors.py  external_drift.py  kernel.py  simulations.py
stochastic/: __init__.py  coefficients.py  methods.py
(+283 files in other folders)
