[tool.poetry]
name = "electricity"
version = "0.1.1"
description = ""
authors = ["Antonio Malpica <antoniomalpicamorales@gmail.com>"]
packages = [
    { include = "electricity", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
emd = "^0.5.5"
google-cloud-bigquery = "^2.33.0"
google-cloud-bigquery-storage = "^2.11.0"
joblib = "^1.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.3.4"
numba = "^0.55.2"
pandas = "^1.4.0"
pyarrow = "^6.0.1"
requests = "^2.25.0"
retry = "^0.9.2"
seaborn = "^0.11.2"
scipy = "^1.6.0"
statsmodels = "^0.13.1"
torch = "^1.8.0"
torchdiffeq = "^0.2.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
